test/libyul/yulSyntaxTests/invalid/verbatim_reserved.yul
{
    let verbatim := 2
    let verbatim_1i_2o := 3
}
// ----
// ParserError 5568: (32-46): Cannot use builtin function name "verbatim_1i_2o" as identifier name.
